k8s/base/jlapp-producao-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jlapp-producao-deployment
spec:
  selector:
    matchLabels:
      app: jlapp-producao
  replicas: 1
  template:
    metadata:
      labels:
        app: jlapp-producao
    spec:
      serviceAccountName: producao-sa
      containers:
      - name: jlapp-producao
        image: jlapp-producao
        ports:
        - containerPort: 8074
        # resources:
        #   requests:
        #     cpu: 200m
        #     memory: 256Mi
        #   limits:
        #     cpu: 600m
        #     memory: 512Mi
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8074
          initialDelaySeconds: 15
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8074
          initialDelaySeconds: 20
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 20
