k8s/base/jlapp-producao-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jlapp-producao-service
spec:
  selector:
    app: jlapp-producao
  ports:
  - port: 8074
    targetPort: 8074
